feat(record-processor): Adding support for plugin in an optional thumbnail generation engine to generate a thumbnail once the video is uploaded

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -25,3 +25,7 @@ packages:
     interfaces:
       Publisher:
       Subscriber:
+
+  processing-orchestrator/pkg/thumb-generator:
+    interfaces:
+      ThumbGenService:
